fix alignment of modal view on large monitors

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -343,9 +343,9 @@ ul {
   border-radius: 3px;
   height: 85%;
   width: 600px;
-  position: relative;
-  left: 25%;
   margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
   padding: 10px 60px 20px 60px;
   overflow: scroll;
 
